--- a/canigo/src/main/resources/application.properties
+++ b/canigo/src/main/resources/application.properties
@@ -18,7 +18,7 @@ logging.level.root=info
 
 # DataSource Setting(MySQL)
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/GoOrNo?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul
+spring.datasource.url=jdbc:mysql://127.0.0.1:3307/goorno?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul&allowPublicKeyRetrieval=true
 spring.datasource.username=team
 spring.datasource.password=team@12345
 
