--- a/canigo/src/main/resources/application.properties
+++ b/canigo/src/main/resources/application.properties
@@ -16,11 +16,17 @@ logging.level.root=info
 # JPA 플랫폼 지정 (H2)
 #spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
-# DataSource Setting(MySQL)
+# DataSource Setting(MySQL) - HJ
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://127.0.0.1:3307/goorno?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul&allowPublicKeyRetrieval=true
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/goorno?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul&allowPublicKeyRetrieval=true
 spring.datasource.username=team
 spring.datasource.password=team@12345
+
+# DataSource Setting(MySQL) - DH
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://127.0.0.1:3307/goorno?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul&allowPublicKeyRetrieval=true
+#spring.datasource.username=team
+#spring.datasource.password=team@12345
 
 # JPA 플랫폼 지정 (MySQL) - MySQL 8.x 버전 이상
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
