스프링 부트, Vue 전체 변경 적용

--- a/canigo/src/main/resources/application.properties
+++ b/canigo/src/main/resources/application.properties
@@ -39,3 +39,7 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.generate-ddl=true
 # create, update, validate, none
 spring.jpa.hibernate.ddl-auto=create
+
+# 파일 용량 제한
+spring.servlet.multipart.max-file-size=50MB
+spring.servlet.multipart.max-request-size=50MB
