--- a/canigo/build.gradle
+++ b/canigo/build.gradle
@@ -29,7 +29,10 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'com.mysql:mysql-connector-j'	
+	implementation 'com.mysql:mysql-connector-j'
+	implementation 'org.springframework.boot:spring-boot-starter-aop'		 // AOP
+	implementation 'org.springframework.boot:spring-boot-starter-actuator' 	 // Actuator
+	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0' // Swagger	
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	runtimeOnly 'com.h2database:h2'
