--- a/canigo/src/main/resources/application.properties
+++ b/canigo/src/main/resources/application.properties
@@ -4,6 +4,13 @@ server.port=8090
 # 로깅 수준 설정(전체 기본값)
 logging.level.root=info
 
+# actuator 설정
+# 운영 환경에서는 include를 일부 엔드포인트에만 허용하거나, Spring Security로 접근 제한 필요
+# 액추에이터의 HTTP 엔드포인트 중 어떤 것들을 외부에 노출할 지 지정(기본값은 "health", "info")
+management.endpoints.web.exposure.include= health, info, metrics, beans, loggers, env, threaddump, httptrace, caches
+# GET /actuator/health 호출 시, 자세한 상태 정보를 보여줄 것인지 지정(기본값은 when-authorized)
+management.endpoint.health.show-details= always
+
 # 특정 패키지 로깅 수준 설정 예시
 #logging.level.com.example.myapp=DEBUG
 
@@ -17,16 +24,16 @@ logging.level.root=info
 #spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 # DataSource Setting(MySQL) - HJ
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.datasource.url=jdbc:mysql://127.0.0.1:3306/goorno?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul&allowPublicKeyRetrieval=true
-#spring.datasource.username=team
-#spring.datasource.password=team@12345
-
-# DataSource Setting(MySQL) - DH
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://127.0.0.1:3307/goorno?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul&allowPublicKeyRetrieval=true
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/goorno?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul&allowPublicKeyRetrieval=true
 spring.datasource.username=team
 spring.datasource.password=team@12345
+
+# DataSource Setting(MySQL) - DH
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://127.0.0.1:3307/goorno?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul&allowPublicKeyRetrieval=true
+#spring.datasource.username=team
+#spring.datasource.password=team@12345
 
 # JPA 플랫폼 지정 (MySQL) - MySQL 8.x 버전 이상
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
