Jwt, security 관련 의존성 및 config 추가, User 관련 로직, 테스트 추가

--- a/canigo/src/main/resources/application.properties
+++ b/canigo/src/main/resources/application.properties
@@ -50,3 +50,11 @@ spring.jpa.hibernate.ddl-auto=create
 # 파일 용량 제한
 spring.servlet.multipart.max-file-size=50MB
 spring.servlet.multipart.max-request-size=50MB
+
+# JWT 설정 - JwtProperties.java에서 prefix로 불러 옴
+# JWT 암호화하고 서명할 때 사용하는 비밀 키
+jwt.secret-key: goorno-super-secret-jwt-signing-key
+# AccessToken의 유효시간(분)
+jwt.access-token-expiration-minutes=30
+# RefreshToken의 유효기간(일)
+jwt.refresh-token-expiration-days=7
