--- a/canigo/build.gradle
+++ b/canigo/build.gradle
@@ -32,6 +32,9 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-aop'		 // AOP
 	implementation 'org.springframework.boot:spring-boot-starter-actuator' 	 // Actuator
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.6' // Swagger	
+	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'					 // JWT
+	runtimeOnly    'io.jsonwebtoken:jjwt-impl:0.11.5'
+	runtimeOnly    'io.jsonwebtoken:jjwt-jackson:0.11.5'
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	runtimeOnly 'com.h2database:h2'
