--- a/go_or_no-vue/package.json
+++ b/go_or_no-vue/package.json
@@ -16,10 +16,13 @@
     "chartist": "0.11.0",
     "es6-promise": "4.2.8",
     "eslint-plugin-vue": "^9.8.0",
+    "quill": "^2.0.3",
     "vue": "2.7.14",
     "vue-clickaway": "2.2.2",
     "vue-notifyjs": "0.3.0",
-    "vue-router": "3.0.1"
+    "vue-quill-editor": "^3.0.6",
+    "vue-router": "3.0.1",
+    "vue-toasted": "^1.1.28"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^5.0.8",
