SMTP 설정 의존성 추가, 이메일 인증, 이메일 중복 확인 메서드 추가

--- a/canigo/src/main/resources/application-test.properties
+++ b/canigo/src/main/resources/application-test.properties
@@ -7,3 +7,14 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+# SMTP test config
+spring.mail.host=localhost
+spring.mail.port=1025
+spring.mail.username=test
+spring.mail.password=test
+spring.mail.properties.mail.smtp.auth=false
+spring.mail.properties.mail.smtp.starttls.enable=false
+
+# actuator health check disable
+management.health.mail.enabled=false
