--- a/canigo/src/main/resources/application.properties
+++ b/canigo/src/main/resources/application.properties
@@ -45,7 +45,7 @@ spring.jpa.properties.hibernate.format_sql=true
 # 자동 테이블 생성 및 업데이트
 spring.jpa.generate-ddl=true
 # create, update, validate, none
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 
 # 파일 용량 제한
 spring.servlet.multipart.max-file-size=50MB
@@ -58,3 +58,6 @@ jwt.secret-key: goorno-super-secret-jwt-signing-key
 jwt.access-token-expiration-minutes=30
 # RefreshToken의 유효기간(일)
 jwt.refresh-token-expiration-days=7
+
+# SMTP 설정
+spring.config.import=application-mail.properties
