--- a/canigo/build.gradle
+++ b/canigo/build.gradle
@@ -29,10 +29,12 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'com.mysql:mysql-connector-j'
+	implementation 'org.springframework.boot:spring-boot-starter-mail'		 // SMTP
+	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'  // 타임리프
 	implementation 'org.springframework.boot:spring-boot-starter-aop'		 // AOP
 	implementation 'org.springframework.boot:spring-boot-starter-actuator' 	 // Actuator
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.6' // Swagger	
-	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'					 // JWT
+	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'					 	 // JWT
 	runtimeOnly    'io.jsonwebtoken:jjwt-impl:0.11.5'
 	runtimeOnly    'io.jsonwebtoken:jjwt-jackson:0.11.5'
 	compileOnly 'org.projectlombok:lombok'
