--- a/canigo/src/main/resources/application.properties
+++ b/canigo/src/main/resources/application.properties
@@ -53,11 +53,11 @@ spring.servlet.multipart.max-request-size=50MB
 
 # JWT 설정 - JwtProperties.java에서 prefix로 불러 옴
 # JWT 암호화하고 서명할 때 사용하는 비밀 키
-jwt.secret-key: goorno-super-secret-jwt-signing-key
+jwt.secret-key=goorno-super-secret-jwt-signing-key
 # AccessToken의 유효시간(분)
 jwt.access-token-expiration-minutes=30
 # RefreshToken의 유효기간(일)
 jwt.refresh-token-expiration-days=7
 
 # SMTP 설정
-spring.config.import=application-mail.properties
+spring.config.import=classpath:application-mail.properties
